[gd_scene load_steps=9 format=3 uid="uid://dwvwdodx7o8cn"]

[ext_resource type="Script" path="res://scripts/fish_window.gd" id="1_5ltjf"]
[ext_resource type="PackedScene" uid="uid://bvysxwumu1ofw" path="res://scenes/window.tscn" id="1_a5j4n"]
[ext_resource type="PackedScene" uid="uid://c2vqextiq0c1g" path="res://scenes/slot.tscn" id="2_o2nfp"]
[ext_resource type="Theme" uid="uid://dw88p5q24f3k5" path="res://themes/card.tres" id="5_iavi8"]
[ext_resource type="Texture2D" uid="uid://vnrtn7tp4n02" path="res://assets/ui/button/main_button_normal.png" id="7_6wf1o"]
[ext_resource type="Texture2D" uid="uid://ccg43x4yp7fby" path="res://assets/ui/button/main_button_pressed.png" id="8_8ball"]
[ext_resource type="Texture2D" uid="uid://d3clu0mhps6ga" path="res://assets/ui/logo/fishing.png" id="9_slanu"]
[ext_resource type="Texture2D" uid="uid://c08m1lxxg66ey" path="res://assets/ui/logo/fishing_white.png" id="10_ajm1c"]

[node name="Window" instance=ExtResource("1_a5j4n")]
offset_right = 280.0
offset_bottom = 195.0
script = ExtResource("1_5ltjf")

[node name="Titre" parent="." index="1"]
text = "Fishing"

[node name="Slot" parent="." index="3" instance=ExtResource("2_o2nfp")]
layout_mode = 0
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 152.0
offset_top = 36.0
offset_right = 152.0
offset_bottom = 36.0
grow_horizontal = 1
grow_vertical = 1
card_type = 1

[node name="Timer" type="Timer" parent="." index="4"]
wait_time = 5.0
one_shot = true

[node name="Start" type="TextureButton" parent="." index="5"]
layout_mode = 0
offset_left = 142.0
offset_top = 164.0
offset_right = 250.0
offset_bottom = 186.0
texture_normal = ExtResource("7_6wf1o")
texture_pressed = ExtResource("8_8ball")
texture_disabled = ExtResource("8_8ball")
metadata/_edit_group_ = true

[node name="Label" type="Label" parent="Start" index="0"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("5_iavi8")
text = "Fish"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ProgressBar" type="TextureProgressBar" parent="." index="6"]
layout_mode = 0
offset_left = 25.0
offset_top = 54.0
offset_right = 99.0
offset_bottom = 140.0
scale = Vector2(1.3, 1.3)
value = 75.0
fill_mode = 3
texture_under = ExtResource("9_slanu")
texture_progress = ExtResource("10_ajm1c")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="pressed" from="Start" to="." method="_on_start_pressed"]
